Ensure draggable layout entries aren't too wide

--- a/root/css/global.css
+++ b/root/css/global.css
@@ -488,6 +488,11 @@ select ul li.subs {
     height:110px;
 }
 
+.targetSpot .dropcontainer
+{
+    display:inline-block;
+}
+
 .removeButton
 {
     display:inline-block;
